<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail2StrokeLegend">

    <ScrollView
        android:id="@+id/detailmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgbike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/honda_dash" />

                <TextView
                    android:id="@+id/namebike"
                    style="@style/TextContent.Small.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#4D000000"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/bike_name" />


            </FrameLayout>

            <TextView
                android:id="@+id/harga"
                style="@style/TextContent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/price"
                android:textSize="32sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:textSize="14sp"
                        style="@style/TextContent.Subtitle"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/manufacture" />

                    <TextView
                        android:id="@+id/mrkmtr"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bike_name"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextContent.Subtitle"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/tv_jnsmtr"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jenis"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextContent.Subtitle"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/year" />

                    <TextView
                        android:id="@+id/tahun"
                        style="@style/TextContent.Subtitle"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/year" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextContent.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/cc"
                        android:textSize="14sp" />

                    <TextView
                       android:id="@+id/kyubi"
                        style="@style/TextContent.Subtitle"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/cc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/detail"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/dtl"
                        style="@style/TextContent.Subtitle"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/detail" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>